# ldap-haskell

./: .gitignore  LDAP.cabal  README.md
Encoding/: InternalUtils.hs
src/: main.hs
src/Encoding/: BER.hs  InternalUtils.hs  LDAPDefs.hs  LDAPRead.hs  LDAPWrite.hs
src/Internal/: Entry.hs  ExampleUsage.hs  LDAPInternalApi.hs  Tree.hs  api.hs  entry.hs  tree.hs
src/Protocol/: LDAPProtocol.hs
test/: barbara.ldif  barbaraMod.ldif  testAdd.sh  testDelete.sh  testMod.sh  testSearch.sh
